# tanks

./: .gitignore  CMakeLists.txt  Game.cpp  Game.hpp  Makefile  README.md  compile.sh  main.cpp  requirements.txt  sdltest.cp312-win_amd64.pyd  setup.py  test.py
core/: Buffer.cpp  Buffer.h  Collisions.cpp  Collisions.h  Geometry.cpp  Geometry.h  KeyboardEvents.cpp  KeyboardEvents.h  Models.cpp  Models.h  Object.cpp  Object.h  Rotate.cpp  Rotate.h  Shaders.cpp  Shaders.h  Sprites.cpp  Sprites.h  Texture.cpp  Texture.h  Transformations.cpp  Transformations.h  Window.cpp  Window.h  compile.sh  glad.c  image.cpp  image.h  main.cpp  run.cpp  tanks  window.h
core/glad/: glad.h
glad/include/glad/: glad.h  glad.h:Zone.Identifier
glad/src/: glad.c
shaders/: README.md  f_shader.vert  v_rotate_shader.vert  v_shader.vert  vector_shader.vert
src/: __main__.py  ammo.py  bullets_bar.py  collisions.py  controls.py  display.py  enemy.py  game_objects.py  game_window.py  gameplay.py  handlers.py  player.py  renderer.py  rotation.py  sprites.py  structures.py  walls.py
tests/: image_loader.py
transformations/: Rotate.cpp  Rotate.h
